# Azurite

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cli/: azurite  install.sh  uninstall.sh
cli/.azurite.d/: help.sh  install.sh  remove.sh  update.sh  version.sh
documentation/: engine_core_architecture.md  engine_modules.md  engine_systems_manager.md
documentation/umls/: engine_components_storage.md  engine_state_machine.md
documentation/user_guide/: conf.py  index.rst
engine/: CMakeLists.txt
engine/include/: ComponentsStorage.hpp  ComponentsStorage.impl.hpp  Game.hpp  Modules.hpp  StateMachine.hpp  SystemsManager.hpp  SystemsManager.impl.hpp  Types.hpp
engine/include/Azurite/: ComponentsSeeker.hpp  ComponentsStorage.hpp  ComponentsStorage.impl.hpp  Game.hpp  Modules.hpp  Snitch.hpp  StateMachine.hpp  SystemsManager.hpp  SystemsManager.impl.hpp  Types.hpp  print_hello.hpp
engine/include/Azurite/components/: CAnimatedSprite.hpp  CButton.hpp  CCollisionBox.hpp  CDeathRattle.hpp  CDestructible.hpp  CInputAction.hpp  CLifetime.hpp  CSpeaker.hpp  CSprite.hpp  CTransform2D.hpp  CVelocity.hpp  LifeComponents.hpp  MovementComponents.hpp  SoundComponents.hpp  SpriteComponents.hpp  UIComponents.hpp
engine/include/Azurite/modules/: SfmlModule.hpp
engine/include/Azurite/systems/: LifeSystems.hpp  MovementSystems.hpp  SoundSystems.hpp  SpriteSystems.hpp  Ssprites_drawer.hpp  UISystems.hpp
engine/src/: ComponentsStorage.cpp  Game.cpp  Snitch.cpp  StateMachine.cpp  SystemsManager.cpp  lib.cpp
engine/src/modules/: SfmlModule.cpp
engine/src/systems/: LifeSystems.cpp  MovementSystems.cpp  SoundSystems.cpp  SpriteSystems.cpp  Ssprites_drawer.cpp  UISystems.cpp
examples/draft/: CMakeLists.txt  main.cpp
examples/draft/assets/: shooting_range_spritesheet.json
examples/draft/components/: CButton.hpp  CTarget.hpp
examples/draft/states/: GameState.cpp  GameState.hpp  MainState.cpp  MainState.hpp  PauseState.cpp  PauseState.hpp  ScoreState.cpp  ScoreState.hpp
examples/draft/systems/: ShootingRangeSystems.cpp  ShootingRangeSystems.hpp
examples/shooting_range/: CMakeLists.txt  main.cpp
examples/shooting_range/assets/: azurite.json
examples/shooting_range/states/: GameState.cpp  GameState.hpp  MainState.cpp  PauseState.cpp  PauseState.hpp  ScoreState.cpp  ScoreState.hpp
examples/shooting_range/systems/: ShootingRangeSystems.cpp  ShootingRangeSystems.hpp
examples/test/: CMakeLists.txt  main.cpp
src/: test_main.cpp
tests/: CMakeLists.txt  engine_core_tests.cpp
